--- a/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
+++ b/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ecommerce.API.Domain\Ecommerce.API.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
