feat: Ajustes no repositorio  e primeira migration

--- a/src/Ecommerce.API/appsettings.json
+++ b/src/Ecommerce.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EcommerceConnection": "server=localhost;database=ecommerce;user=root;password=root"
+  }
 }
