--- a/src/Ecommerce.API/appsettings.Development.json
+++ b/src/Ecommerce.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EcommerceConnection": "server=localhost;database=ecommerce;user=root;password=root"
   }
 }
