--- a/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
+++ b/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
@@ -25,6 +25,8 @@
 	 <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 	 <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 	 <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
+	 <PackageReference Include="Polly" Version="7.2.3" />
+	 <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
