--- a/src/Ecommerce.API.Application/Ecommerce.API.Application.csproj
+++ b/src/Ecommerce.API.Application/Ecommerce.API.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.5" />
   </ItemGroup>
 
 </Project>
