--- a/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
+++ b/src/Ecommerce.API.Infrastructure/Ecommerce.API.Infrastructure.csproj
@@ -24,9 +24,11 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	 <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
 	 <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+	 <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.5" />
 	 <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
 	 <PackageReference Include="Polly" Version="7.2.3" />
 	 <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+	 <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
