--- a/src/Ecommerce.API/Ecommerce.API.csproj
+++ b/src/Ecommerce.API/Ecommerce.API.csproj
@@ -17,7 +17,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
