--- a/src/Ecommerce.API/appsettings.json
+++ b/src/Ecommerce.API/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EcommerceConnection": "server=localhost;database=ecommerce;user=root;password=root"
+  },
+    "RabbitMQ": {
+      "HostName": "localhost",
+      "Port": 5672,
+      "UserName": "admin",
+      "Password": "admin",
+      "ExchangeName": "ecommerce-exchange",
+      "QueueName": "ecommerce-queue"
+    }
   }
-}
+
