--- a/src/Ecommerce.API/appsettings.json
+++ b/src/Ecommerce.API/appsettings.json
@@ -9,13 +9,22 @@
   "ConnectionStrings": {
     "EcommerceConnection": "server=localhost;database=ecommerce;user=root;password=root"
   },
-    "RabbitMQ": {
-      "HostName": "localhost",
-      "Port": 5672,
-      "UserName": "admin",
-      "Password": "admin",
-      "ExchangeName": "ecommerce-exchange",
-      "QueueName": "ecommerce-queue"
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "admin",
+    "Password": "admin",
+    "ExchangeName": "ecommerce-exchange",
+    "QueueName": "ecommerce-queue"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
   }
+}
 
