--- a/src/Ecommerce.API.Application/Ecommerce.API.Application.csproj
+++ b/src/Ecommerce.API.Application/Ecommerce.API.Application.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
 </Project>
