--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build_and_deploy:
     name: Build and Deploy
-    runs-on: windows-latest # Use o sistema operacional Windows
+    runs-on: windows-latest 
 
     steps:
       - name: Checkout Repository
@@ -17,7 +17,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '7.0' # Use a versão 7 aqui
+          dotnet-version: '7.0' 
 
       - name: Restore Dependencies
         run: dotnet restore C:\Users\coelh\source\repos\Ecommerce.API\src\Ecommerce.API\Ecommerce.API.sln
