feat: banco azure

--- a/src/Ecommerce.API/appsettings.json
+++ b/src/Ecommerce.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EcommerceConnection": "server=localhost;database=ecommerce;user=root;password=root"
+    "EcommerceConnection": "Server=ecommerceapi.mysql.database.azure.com; Port=3306; Database=ecommerceapi; User Id=darlene; Password=Cl@rins8138;"
   }
 }
 
